# monitoring-observability

./: .gitignore  .sample.env  README.md  REQ_README.md  TROUBLESHOOT.md  dashboard.env  sample.dashboard.env
backend/: app.py  cache.py  config.py  db.py  poller.py  pyproject.toml  sse.py
backend/routes/: checkpoints.py  metrics.py  runs.py  stream.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArchitectureStats.tsx  CheckpointsSection.tsx  GeneratedSamples.tsx  InfoBadge.tsx  InfrastructureSection.tsx  LossMetrics.tsx  MoEAnalytics.tsx  PlotlyChart.tsx  ThroughputSection.tsx  TimelineSection.tsx  Topbar.tsx
frontend/src/components/charts/: MetricCard.tsx  TimeSeriesChart.tsx
frontend/src/components/layout/: Header.tsx  RunBadges.tsx  Sidebar.tsx
frontend/src/components/tabs/: CheckpointsTab.tsx  ModelTab.tsx  ProgressTab.tsx  SystemTab.tsx  TrainingTab.tsx  useTabMetrics.ts
frontend/src/hooks/: useMetricData.ts  useSSE.ts
frontend/src/lib/: decimation.ts
frontend/src/stores/: metricsStore.ts
frontend/src/types/: metrics.ts
