[project]
name = "training-dashboard-backend"
version = "0.1.0"
description = "Realtime training metrics dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "clickhouse-connect>=0.8.0",
    "sse-starlette>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
